syntax = "proto3";

option go_package = "github.com/redhat-marketplace/redhat-marketplace-operator/airgap/v2/apis/fileserver";
option java_multiple_files = true;
option java_package = "com.redhat.marketplace.airgap.fileserver";
option java_outer_classname = "FileServer";

package fileserver.v1;

import "apis/model/v1/modelv1.proto";
import "google/protobuf/timestamp.proto";

service FileServer {
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse) {};
  rpc ListFileMetadata(ListFileMetadataRequest) returns (stream ListFileMetadataResponse) {};
  rpc GetFileMetadata(GetFileMetadataRequest) returns (GetFileMetadataResponse) {};
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse) {};
  rpc UpdateFileMetadata(UpdateFileMetadataRequest) returns (UpdateFileMetadataResponse) {};
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse) {};
  rpc CleanTombstones(CleanTombstonesRequest) returns (CleanTombstonesResponse) {};
}

// streams a file identified by
message UploadFileRequest {
 oneof data {
    model.v1.FileInfo info = 1;
    bytes chunk_data = 2;
  };
}

message UploadFileResponse {
  model.v1.FileID file_id = 1;
  uint32 size = 2;
}

message GetFileMetadataRequest {
  model.v1.FileID file_id = 1;
}

message GetFileMetadataResponse {
  model.v1.FileInfo info = 1;
}

message DownloadFileRequest {
  model.v1.FileID file_id = 1;
}

message DownloadFileResponse {
 oneof data {
    model.v1.FileInfo info = 1;
    bytes chunk_data = 2;
  };
}

message ListFileMetadataRequest {
  message ListFileFilter {
    enum Comparison {
      EQUAL = 0;
      LESS_THAN = 1;
      GREATER_THAN = 2;
      CONTAINS = 3;
    }

    string key = 1;
    Comparison operator = 2;
    string value = 3;
  }

  message ListFileSort {
    enum SortOrder {
        ASC = 0;
        DESC = 1;
    }

    string key = 1;
    SortOrder sort_order = 2;
  }

  repeated ListFileFilter filter_by = 1;
  repeated ListFileSort sort_by = 2;
}


message ListFileMetadataResponse {
  model.v1.FileInfo results = 1;
}

message UpdateFileMetadataRequest {
  model.v1.FileID file_id = 1;
}

message UpdateFileMetadataResponse {
  model.v1.FileID file_id = 1;
}

// sets the files tombstone with the current timestamp
message DeleteFileRequest {
  model.v1.FileID file_id = 1;
}

message DeleteFileResponse {
  model.v1.FileID file_id = 1;
}

message CleanTombstonesRequest {
  google.protobuf.Timestamp before = 1;
}

message CleanTombstonesResponse {
  int32 tombstones_cleaned = 1;
  repeated model.v1.FileID files = 2;
}
